Adding Edit and Copy button, update msfvenom paylods, clean unused variables

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -27,7 +27,7 @@
 }
 
 .site-layout .site-layout-background {
-	background: #141414 !important;
+	background: #0f0f0f !important;
 	border-radius: 10px;
 }
 .ant-menu-inline .ant-menu-item:not(:last-child),
