--- a/entrypoints/popup/assets/css/style.css
+++ b/entrypoints/popup/assets/css/style.css
@@ -53,9 +53,7 @@
 
 .logo:hover,
 .qrcode:hover {
-	transition:
-		mask-position 2s ease,
-		-webkit-mask-position 2s ease;
+	transition: mask-position 2s ease, -webkit-mask-position 2s ease;
 	-webkit-mask-position: 120%;
 	mask-position: 120%;
 	opacity: 1;
@@ -167,18 +165,8 @@ body {
 	min-width: 750px;
 	min-height: auto;
 	margin: 0px !important;
-	font-family:
-		system-ui,
-		-apple-system,
-		BlinkMacSystemFont,
-		"Segoe UI",
-		Roboto,
-		Oxygen,
-		Ubuntu,
-		Cantarell,
-		"Open Sans",
-		"Helvetica Neue",
-		sans-serif;
+	font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+		Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 	font-size: 14px;
 }
 
